# SARGE

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
legacy/sage_dee_v2/: README.md  pyproject.toml
legacy/sage_dee_v2/configs/v2/: getm_qwen3_4b_qlora.yaml  sage_v2_duee_fin.yaml  sage_v2_getm_format_stable.yaml  sage_v2_phase10_chfinann_frozen_profile.yaml  sage_v2_phase11_docfee_stress.yaml  sage_v2_phase4_prompt_baselines.yaml  sage_v2_phase7_surface_memory_ablation.yaml  sage_v2_sft_smoke.yaml  sage_v2_smoke.yaml  sage_v2_v21_r4b_event_planner_probe.yaml  sage_v2_v21_r6_seed_extension_fullmax_s4.yaml  sage_v2_v21_r7_thesis_minimal_matrix.yaml  sage_v2_v21_r8_baseline_comparison.yaml  sage_v2_v21_s4_train_size_scaling.yaml  sage_v2_v21_surface_coverage.yaml
legacy/sage_dee_v2/contracts/: event_record.schema.json  run_contract_v2.schema.json
legacy/sage_dee_v2/docs/fulltrain_freeze/: ARTIFACT_INDEX.md  METHOD_UPGRADE_REFERENCE.md  METRICS_SUMMARY.md  PAPER_EXPERIMENT_BOUNDARIES.md  README.md  REPRODUCIBILITY_AND_DETERMINISM.md  SAGE_DEE_V2_FULLTRAIN_PROCESS_RECORD.md
legacy/sage_dee_v2/docs/refactor/: SAGE_V2_FINAL_TEST_RESULT.json
legacy/sage_dee_v2/scripts/server/: _init_conda.sh  eval_4090.sh  fetch_results_from_4090.sh  predict_4090.sh  preflight_4090.sh  status_4090.sh  sync_to_4090.sh  train_4090.sh
legacy/sage_dee_v2/scripts/v2/: aggregate_phase10_chfinann_frozen_profile.py  aggregate_phase11_docfee_stress.py  (+51 more)
legacy/sage_dee_v2/tests/: test_documentation_consistency.py  test_sage_v2_boundaries.py  test_server_path_contract.py
(+479 files in other folders)
