[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sage-dee"
version = "0.1.0"
description = "Schema-guided document-level event extraction research scaffold."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.20.0",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.11.0",
]
server = [
  "accelerate>=0.33.0",
  "bitsandbytes>=0.43.0",
  "peft>=0.11.0",
  "transformers>=4.51.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
norecursedirs = ["archive"]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
  ".git",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  ".worktrees",
  "archive/v1",
  "data",
  "data_full",
  "models",
  "artifacts",
  "runs",
  "outputs",
  "checkpoints",
  "evaluator_artifacts",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
